# 4Dvisor-HackUMBC-2025

./: .env  .env.example  .gitignore  README.md  import-to-neo4j.ps1
client/: index.html  package-lock.json  package.json
client/src/components/: ApiStudents.tsx  Carousel.tsx  Header.tsx  RadialCircle.tsx
client/src/css/: App.css  Header.css  Info.css
client/src/scss/: custom.scss
client/src/tsx/: App.tsx  Home.tsx  Info.tsx
server/: .env  .env.example  pyproject.toml
server/src/: core.py  server.py
