[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "4divisor"
version = "0.1.0"
description = "A short description of my awesome package."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
maintainers = [
    { name = "Another Contributor", email = "another.email@example.com" },
]
keywords = ["python", "package", "example"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv>=1.1.1",
    "Flask>=3.1.2",
    "neo4j>=5.28.2",
]

# [project.scripts]
# my-command = "my_package.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]